# mario-kart-leaderboard

./: .gitignore  AGENTS.md  Cargo.toml  devbox.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md  TESTING.md  bacon.toml  docker-compose.yml
backend/migrations/: 00_enable_extensions.sql  01_create_initial_tables.sql  02_add_elo_and_tracks.sql  03_remove_team_mode.sql  04_update_scores_to_positions.sql  05_add_per_tournament_and_race_elo_tracking.sql  06_add_created_at_to_scores.sql  07_add_teammate_elo_contributions.sql  08_fix_player_match_scores.sql  09_add_tournament_elo_breakdown_columns.sql  10_recompute_all_elo_from_scratch.sql  11_add_avatar_filename_to_players.sql  12_drop_team_match_scores.sql  13_add_tournament_stats.sql  14_add_lobby_entries.sql  15_add_disabled_to_players.sql
backend/src/: auth.rs  config.rs  db.rs  elo.rs  error.rs  lib.rs  main.rs  observability.rs  validation.rs
backend/src/graphql/: context.rs  mod.rs  schema.rs
backend/src/graphql/auth/: mod.rs  mutations.rs  queries.rs
backend/src/graphql/groups/: loaders.rs  mod.rs  queries.rs  types.rs
backend/src/graphql/lobby/: loaders.rs  mod.rs  mutations.rs  types.rs
backend/src/graphql/matches/: loaders.rs  mod.rs  mutations.rs  queries.rs  types.rs
backend/src/graphql/players/: loaders.rs  mod.rs  mutations.rs  queries.rs  types.rs
backend/src/graphql/results/: loaders.rs  mod.rs  types.rs
backend/src/graphql/rounds/: loaders.rs  mod.rs  mutations.rs  types.rs
backend/src/graphql/subscriptions/: mod.rs  types.rs  (+1 more)
backend/src/handlers/: graphql.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: group.rs  lobby_entry.rs  match.rs  mod.rs  player.rs  player_match_score.rs  player_race_score.rs  player_teammate_elo_contribution.rs  player_tournament_score.rs  round.rs  team.rs  team_match_score.rs  tournament.rs  tournament_stat.rs  track.rs
backend/src/services/: elo.rs  match_service.rs  mod.rs  notification_manager.rs  race_allocation.rs  result_recording.rs  score_calculation.rs  scoring.rs  team_allocation.rs  teammate_elo.rs  tournament_completion.rs  track_selection.rs  validation.rs
backend/src/telemetry/: db.rs
backend/tests/: auth_test.rs  elo_test.rs  groups_test.rs  lobby_test.rs  matches_test.rs  notification_manager_test.rs  players_test.rs  result_recording_test.rs  rounds_test.rs  score_calculation_test.rs  team_allocation_test.rs  teammate_elo_test.rs  tournament_completion_test.rs  tournaments_test.rs  track_selection_test.rs  tracks_test.rs  validation_test.rs
backend/tests/common/: fixtures.rs  setup.rs
(+127 files in other folders)
