[package]
name = "mario-kart-leaderboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "uuid", "chrono"] }
async-graphql-axum = "7.0"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Authentication
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
argon2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "2.0"
async-trait = "0.1"
rand = "0.9"

[dev-dependencies]
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }
tokio-test = "0.4"
futures = "0.3"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"